<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">
    
    <LinearLayout
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:gravity="center"
            android:text="@string/main_text"
            android:layout_width="200dp"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:layout_height="wrap_content"
            />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/sig_up_button"
            android:text="@string/sign_up"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/buttonSignUp"
            android:textSize="18sp"
            android:layout_margin="8dp"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/sig_in_button"
            android:text="@string/sign_in"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/buttonSignIn"
            android:textSize="18sp"
            android:layout_margin="8dp"
            android:textColor="@android:color/black"/>

    </LinearLayout>



</RelativeLayout>