<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn">


    <LinearLayout
        android:layout_marginTop="150dp"
        android:orientation="vertical"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/phone_edit_text"
            android:hint="@string/phone_number_edit_text"
            android:textColorHint="@android:color/white"
            android:text="998946982813"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:inputType="phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:met_baseColor="@android:color/white"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="12"
            app:met_primaryColor="@android:color/white"
            app:met_singleLineEllipsis="true"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/password_edit_text"
            android:hint="@string/password_edit_text"
            android:textColorHint="@android:color/white"
            android:text="ben123456"
            android:textColor="@android:color/white"
            android:textSize="28sp"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:met_baseColor="@android:color/white"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="12"
            app:met_primaryColor="@android:color/white"
            app:met_singleLineEllipsis="true"/>

    </LinearLayout>

    <Button
        android:id="@+id/sign_in_button_sign_in_layout"
        android:text="@string/sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/buttonSignIn"
        android:textSize="18sp"
        android:layout_margin="12dp"
        android:layout_alignParentBottom="true"
        android:textColor="@android:color/black"
        tools:ignore="ButtonStyle" />


</RelativeLayout>